--- a/index.css
+++ b/index.css
@@ -14,13 +14,37 @@ body{
   align-items : center;
   justify-content: center;
   height: 100vh;
+  color:white;
   margin:0;
 
 }
 
 .container {
-  width:90vw;
-  height: 90vh ;
-  background-color: rgb(215, 122, 153);
-  position: relative;
+  width: 80vw;
+  height: 90vh;
+  background-color: rgba(190,121,144,0.65);
+  border-radius: 12px;
+  backdrop-filter: blur(19px) saturation(180%);
+  border: 1px solid rgba(255, 255, 255, .125);
+  display: flex;
+  flex-direction: row;
+  overflow:hidden;
+  
 }
+.list {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.chat {
+  flex: 2;
+  overflow-y: auto;
+}
+
+.detail {
+  flex: 1;
+  overflow-y: auto;
+}
+
